--- a/auth-wlpcfg/Dockerfile
+++ b/auth-wlpcfg/Dockerfile
@@ -1,17 +1,21 @@
 FROM websphere-liberty:latest
 
-MAINTAINER Ben Smith
+MAINTAINER Erin Schnabel <schnabel@us.ibm.com> (@ebullientworks)
 
-ADD https://download.elastic.co/logstash-forwarder/binaries/logstash-forwarder_linux_amd64 /opt/forwarder
-ADD ./servers/gameon-auth /opt/ibm/wlp/usr/servers/defaultServer/
-RUN apt-get update; apt-get install -y curl; /opt/ibm/wlp/bin/installUtility install  --acceptLicense /opt/ibm/wlp/usr/servers/defaultServer/server.xml
 RUN wget https://github.com/coreos/etcd/releases/download/v2.2.2/etcd-v2.2.2-linux-amd64.tar.gz -q ; \
     tar xzf etcd-v2.2.2-linux-amd64.tar.gz etcd-v2.2.2-linux-amd64/etcdctl --strip-components=1 ; \
     rm etcd-v2.2.2-linux-amd64.tar.gz ; \
     mv etcdctl /usr/local/bin/etcdctl
 
-COPY ./forwarder.conf /opt/forwarder.conf     
+ADD https://download.elastic.co/logstash-forwarder/binaries/logstash-forwarder_linux_amd64 /opt/forwarder
 
+ENV SERVERDIRNAME auth
+
+COPY ./forwarder.conf /opt/forwarder.conf
 COPY ./startup.sh /opt/startup.sh
+
+ADD ./servers/gameon-player /opt/ibm/wlp/usr/servers/defaultServer/
+
+RUN /opt/ibm/wlp/bin/installUtility install  --acceptLicense /opt/ibm/wlp/usr/servers/defaultServer/server.xml
 
 CMD ["/opt/startup.sh"]
