correct references to player
Signed-off-by: Erin Schnabel <ebullient@users.noreply.github.com>

--- a/auth-wlpcfg/build.gradle
+++ b/auth-wlpcfg/build.gradle
@@ -69,6 +69,7 @@ task buildDockerImage(type: DockerBuildImage, dependsOn: ['copyWAR']) {
     inputDir = file('.')
     tag = 'gameon-auth'
     quiet = false
+    pull = true
 }
 
 task stopCurrentContainer(type: DockerStopContainer) {
