First pass at amalgam8 integration
Signed-off-by: Ozzy Osborne <ozzy@ca.ibm.com>

--- a/auth-wlpcfg/build.gradle
+++ b/auth-wlpcfg/build.gradle
@@ -26,19 +26,7 @@ if (null != System.getenv('DOCKER_CERT_PATH')){
     dockerCertPath = System.getenv('DOCKER_CERT_PATH')
 }
 
-def localEnvironment = ["LICENSE=accept",
-            "TWITTER_CONSUMER_KEY=" + System.getenv('TWITTER_CONSUMER_KEY'),
-            "TWITTER_CONSUMER_SECRET=" + System.getenv('TWITTER_CONSUMER_SECRET'),
-            "FACEBOOK_APP_ID=" + System.getenv('FACEBOOK_APP_ID'),
-            "FACEBOOK_APP_SECRET=" + System.getenv('FACEBOOK_APP_SECRET'),
-            "GOOGLE_APP_ID=" + System.getenv('GOOGLE_APP_ID'),
-            "GOOGLE_APP_SECRET=" + System.getenv('GOOGLE_APP_SECRET'),
-            "GITHUB_APP_ID=" + System.getenv('GOOGLE_APP_ID'),
-            "GITHUB_APP_SECRET=" + System.getenv('GOOGLE_APP_SECRET'),
-            "SUCCESS_CALLBACK=" + System.getenv('SUCCESS_CALLBACK'),
-            "KAFKA_URL=" + System.getenv('KAFKA_URL'),
-            "MAP_PLAYER_MODE=" + System.getenv('MAP_PLAYER_MODE')
-        ]
+def localEnvironment = ["LICENSE=accept"]
 
 if (null != System.getenv("SSL_CERT"))
 {
