--- a/auth-app/build.gradle
+++ b/auth-app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 
@@ -60,6 +61,10 @@ dependencies {
 
 test {
    jvmArgs "-javaagent:${configurations.jmockit.singleFile.absolutePath}"
+
+   jacoco {
+     excludes = ["*\$Impl_*"]
+   }   
 }
 
 // Set the Eclipse facets to use 3.1 of the Dynamic Web Module which requires Java 1.7 (at least)
