Health check in Dockerfile
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/auth-wlpcfg/Dockerfile
+++ b/auth-wlpcfg/Dockerfile
@@ -29,3 +29,8 @@ COPY ./startup.sh /opt/startup.sh
 ADD ./servers/gameon-auth /opt/ibm/wlp/usr/servers/defaultServer/
 
 CMD ["/opt/startup.sh"]
+
+HEALTHCHECK \
+  --timeout=10s \
+  --start-period=40s \
+  CMD wget -q -O /dev/null --no-check-certificate https://localhost:9443/auth/health
