Remove a8, http healthcheck
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/auth-wlpcfg/Dockerfile
+++ b/auth-wlpcfg/Dockerfile
@@ -1,27 +1,31 @@
 FROM websphere-liberty:beta
 
-MAINTAINER Erin Schnabel <schnabel@us.ibm.com> (@ebullientworks)
+LABEL maintainer="Erin Schnabel <schnabel@us.ibm.com> (@ebullientworks)"
 
-RUN wget https://github.com/coreos/etcd/releases/download/v2.2.2/etcd-v2.2.2-linux-amd64.tar.gz -q && \
-    tar xzf etcd-v2.2.2-linux-amd64.tar.gz etcd-v2.2.2-linux-amd64/etcdctl --strip-components=1 && \
-    rm etcd-v2.2.2-linux-amd64.tar.gz && \
-    mv etcdctl /usr/local/bin/etcdctl
+ENV ETCD_VERSION 2.2.2
+
+RUN apt-get update \
+  && apt-get install -y curl \
+  \
+# setup etcd
+  && wget https://github.com/coreos/etcd/releases/download/v${ETCD_VERSION}/etcd-v${ETCD_VERSION}-linux-amd64.tar.gz -q \
+  && tar xzf etcd-v${ETCD_VERSION}-linux-amd64.tar.gz etcd-v${ETCD_VERSION}-linux-amd64/etcdctl --strip-components=1 \
+  && rm etcd-v${ETCD_VERSION}-linux-amd64.tar.gz \
+  && mv etcdctl /usr/local/bin/etcdctl
 
 # Install required features
 RUN /opt/ibm/wlp/bin/installUtility install  --acceptLicense \
-    apiDiscovery-1.0 \
-    bluemixLogCollector-1.1 \
-    cdi-1.2 \
-    concurrent-1.0 \
-    couchdb-1.0 \
-    localConnector-1.0 \
-    jaxrs-2.0 \
-    jndi-1.0 \
-    jsonp-1.0 \
-    ssl-1.0 \
-    websocket-1.1
-
-RUN wget -qO- https://github.com/amalgam8/amalgam8/releases/download/v0.4.2/a8sidecar.sh | sh
+      apiDiscovery-1.0 \
+      bluemixLogCollector-1.1 \
+      cdi-1.2 \
+      concurrent-1.0 \
+      couchdb-1.0 \
+      localConnector-1.0 \
+      jaxrs-2.0 \
+      jndi-1.0 \
+      jsonp-1.0 \
+      ssl-1.0 \
+      websocket-1.1
 
 ENV SERVERDIRNAME auth
 
@@ -33,4 +37,4 @@ CMD ["/opt/startup.sh"]
 HEALTHCHECK \
   --timeout=10s \
   --start-period=40s \
-  CMD wget -q -O /dev/null --no-check-certificate https://localhost:9443/auth/health
+  CMD wget -q -O /dev/null http://localhost:9080/auth/health
