Move to common image (OL)
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/auth-wlpcfg/Dockerfile
+++ b/auth-wlpcfg/Dockerfile
@@ -1,36 +1,9 @@
-FROM websphere-liberty:beta
-
-LABEL maintainer="Erin Schnabel <schnabel@us.ibm.com> (@ebullientworks)"
-
-ENV ETCD_VERSION 2.2.2
-
-RUN apt-get update \
-  && apt-get install -y curl \
-  \
-# setup etcd
-  && wget https://github.com/coreos/etcd/releases/download/v${ETCD_VERSION}/etcd-v${ETCD_VERSION}-linux-amd64.tar.gz -q \
-  && tar xzf etcd-v${ETCD_VERSION}-linux-amd64.tar.gz etcd-v${ETCD_VERSION}-linux-amd64/etcdctl --strip-components=1 \
-  && rm etcd-v${ETCD_VERSION}-linux-amd64.tar.gz \
-  && mv etcdctl /usr/local/bin/etcdctl
-
-# Install required features
-RUN /opt/ibm/wlp/bin/installUtility install  --acceptLicense \
-      apiDiscovery-1.0 \
-      bluemixLogCollector-1.1 \
-      cdi-1.2 \
-      concurrent-1.0 \
-      couchdb-1.0 \
-      localConnector-1.0 \
-      jaxrs-2.0 \
-      jndi-1.0 \
-      jsonp-1.0 \
-      ssl-1.0 \
-      websocket-1.1
+FROM gameontext/docker-liberty-custom
 
 ENV SERVERDIRNAME auth
 
 COPY ./startup.sh /opt/startup.sh
-ADD ./servers/gameon-auth /opt/ibm/wlp/usr/servers/defaultServer/
+ADD ./servers/gameon-auth /opt/ol/wlp/usr/servers/defaultServer/
 
 CMD ["/opt/startup.sh"]
 
