--- a/build.gradle
+++ b/build.gradle
@@ -6,3 +6,7 @@ allprojects {
         mavenCentral()
     }
 }
+
+task image(type:Exec) {
+  commandLine 'docker', 'build', '-t', 'gameontext/gameon-auth', 'auth-wlpcfg'
+}
