Remove the messagehub sdk download from server start
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/auth-wlpcfg/Dockerfile
+++ b/auth-wlpcfg/Dockerfile
@@ -1,9 +1,9 @@
-FROM gameontext/docker-liberty-custom:master-9
+FROM gameontext/docker-liberty-custom:master-12
 
 ENV SERVERDIRNAME auth
 
 COPY ./startup.sh /opt/startup.sh
-ADD ./servers/gameon-auth /opt/ol/wlp/usr/servers/defaultServer/
+COPY ./servers/gameon-auth /opt/ol/wlp/usr/servers/defaultServer/
 
 CMD ["/opt/startup.sh"]
 
