Swap url usage to come from env

--- a/auth-app/src/main/resources/application-dummyauth.properties
+++ b/auth-app/src/main/resources/application-dummyauth.properties
@@ -2,11 +2,15 @@ spring.security.oauth2.client.registration.dummy.provider=dummy-provider
 spring.security.oauth2.client.registration.dummy.client-id=dummy-client-id
 spring.security.oauth2.client.registration.dummy.client-secret=dummy-secret
 spring.security.oauth2.client.registration.dummy.client-name=Anonymous User
-spring.security.oauth2.client.registration.dummy.redirect-uri=https://gameon.192.168.130.11.nip.io/auth/oauth2/code/dummy-provider
+# Where the provider should call back to once authentication is complete, must be a browser accessible url.
+spring.security.oauth2.client.registration.dummy.redirect-uri=${FRONT_END_AUTH_URL}/oauth2/code/dummy-provider
 spring.security.oauth2.client.registration.dummy.client-authentication-method=basic
 spring.security.oauth2.client.registration.dummy.authorization-grant-type=authorization_code
 
-spring.security.oauth2.client.provider.dummy-provider.authorization-uri=https://dummy.192.168.130.11.nip.io/auth/dummy/fake/auth
+# This is the 'provider' url the browser will be forwarded to when they login with dummy auth, 
+# it must be a different hostname to the one used for FRONT_END_AUTH_URL
+spring.security.oauth2.client.provider.dummy-provider.authorization-uri=${FRONT_END_DUMMY_AUTH_URL}/dummy/fake/auth
+# These two are only used inside the container to itself, so 127.0.0.1 is fine. 
 spring.security.oauth2.client.provider.dummy-provider.token-uri=http://127.0.0.1:9080/auth/dummy/fake/token
 spring.security.oauth2.client.provider.dummy-provider.user-info-uri=http://127.0.0.1:9080/auth/dummy/fake/userinfo
 spring.security.oauth2.client.provider.dummy-provider.user-name-attribute=id
