--- a/auth-app/src/main/resources/application.properties
+++ b/auth-app/src/main/resources/application.properties
@@ -29,6 +29,10 @@ spring.security.oauth2.client.registration.facebook.client-secret=${FACEBOOK_APP
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_APP_ID:"x"}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_APP_SECRET:"x"}
 
+#set the twitter secrets (not implemented via spring, as twitter isn't oauth2 for login)
+gameon.twitterOAuthConsumerKey=${TWITTER_APP_ID:"x"}
+gameon.twitterOAuthConsumerSecret=${TWITTER_APP_SECRET:"x"}
+
 #we've moved the oauth2 processing to /auth/oauth2 but that doesn't update the client
 #registrations to tell them where to redirect to, so we must override those here.
 spring.security.oauth2.client.registration.github.redirect-uri=${FRONT_END_AUTH_URL}/oauth2/code/github
