--- a/auth-app/src/test/resources/application.properties
+++ b/auth-app/src/test/resources/application.properties
@@ -8,6 +8,9 @@ frontend.auth.url=http://localhost:9080/auth
 
 gameon.mode=development
 
+gameon.twitterOAuthConsumerKey=<your client id>
+gameon.twitterOAuthConsumerSecret=<your client secret>
+
 logging.level.org.springframework.web=DEBUG
 
 server.port=9080
