update healthcheck start period

--- a/auth-wlpcfg/Dockerfile
+++ b/auth-wlpcfg/Dockerfile
@@ -5,6 +5,10 @@ COPY startup.sh /
 
 RUN mkdir /etc/certs && chmod 777 /etc/certs
 
-HEALTHCHECK --timeout=10s --start-period=40s CMD wget -q -O /dev/null http://localhost:9080/auth/health
-
 CMD ["/startup.sh"]
+
+# Generous start time for constrained systems
+HEALTHCHECK \
+  --timeout=10s \
+  --start-period=2m \
+  CMD curl -f http://localhost:9080/auth/health
