Update SSL cert management

--- a/auth-app/src/main/resources/application.properties
+++ b/auth-app/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 gameon.mode=${GAMEON_MODE:"production"}
 
 #location of keystore containing key to use to sign JWTs
-jwt.keystore.location=/etc/certs/key.jks
-jwt.keystore.password=testOnlyKeystore
+jwt.keystore.location=/auth/ssl/key.pkcs12
+jwt.keystore.password=gameontext-keys
 jwt.keystore.alias=default
 
 #how we are known to the outside world
