--- a/auth-app/src/test/resources/application.properties
+++ b/auth-app/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-jwt.keystore.location=/etc/cert/key.jks
-jwt.keystore.password=testOnlyKeystore
+jwt.keystore.location=/auth/ssl/key.pkcs12
+jwt.keystore.password=gameontext-keys
 jwt.keystore.alias=default
 
 frontend.success.callback=https://httpdump.io/akeie
@@ -17,11 +17,11 @@ server.port=9080
 
 spring.security.oauth2.client.registration.google.client-id=<your client id>
 spring.security.oauth2.client.registration.google.client-secret=<your client secret>
- 
-spring.security.oauth2.client.registration.facebook.client-id=<your client id> 
+
+spring.security.oauth2.client.registration.facebook.client-id=<your client id>
 spring.security.oauth2.client.registration.facebook.client-secret=<your client secret>
 
-spring.security.oauth2.client.registration.github.client-id=<your client id> 
+spring.security.oauth2.client.registration.github.client-id=<your client id>
 spring.security.oauth2.client.registration.github.client-secret=<your client secret>
 
 spring.security.oauth2.client.registration.github.redirect-uri=http://127.0.0.1:9080/auth/oauth2/code/github
