--- a/auth-app/src/test/resources/application.properties
+++ b/auth-app/src/test/resources/application.properties
@@ -40,3 +40,5 @@ spring.security.oauth2.client.provider.dummy-provider.authorization-uri=http://d
 spring.security.oauth2.client.provider.dummy-provider.token-uri=http://dummy.127.0.0.1.nip.io:9080/auth/dummy/fake/token
 spring.security.oauth2.client.provider.dummy-provider.user-info-uri=http://dummy.127.0.0.1.nip.io:9080/auth/dummy/fake/userinfo
 spring.security.oauth2.client.provider.dummy-provider.user-name-attribute=id
+
+gameon.redhatauth=${REDHAT_AUTH:"test1:pwd1:prefix1,test2:pwd2:prefix2"}
