add redhat auth

--- a/auth-app/src/main/resources/application.properties
+++ b/auth-app/src/main/resources/application.properties
@@ -38,3 +38,6 @@ gameon.twitterOAuthConsumerSecret=${TWITTER_APP_SECRET:"x"}
 spring.security.oauth2.client.registration.github.redirect-uri=${FRONT_END_AUTH_URL}/oauth2/code/github
 spring.security.oauth2.client.registration.facebook.redirect-uri=${FRONT_END_AUTH_URL}/oauth2/code/facebook
 spring.security.oauth2.client.registration.google.redirect-uri=${FRONT_END_AUTH_URL}/oauth2/code/google
+
+gameon.redhatauth=${REDHAT_AUTH:"redhat1:examplepassword:collaborator,redhat2:examplepassword:explorer"}
+
