--- a/auth-app/src/test/resources/application.properties
+++ b/auth-app/src/test/resources/application.properties
@@ -17,11 +17,11 @@ server.port=9080
 
 spring.security.oauth2.client.registration.google.client-id=<your client id>
 spring.security.oauth2.client.registration.google.client-secret=<your client secret>
-
-spring.security.oauth2.client.registration.facebook.client-id=<your client id>
+ 
+spring.security.oauth2.client.registration.facebook.client-id=<your client id> 
 spring.security.oauth2.client.registration.facebook.client-secret=<your client secret>
 
-spring.security.oauth2.client.registration.github.client-id=<your client id>
+spring.security.oauth2.client.registration.github.client-id=<your client id> 
 spring.security.oauth2.client.registration.github.client-secret=<your client secret>
 
 spring.security.oauth2.client.registration.github.redirect-uri=http://127.0.0.1:9080/auth/oauth2/code/github
@@ -40,3 +40,6 @@ spring.security.oauth2.client.provider.dummy-provider.authorization-uri=http://d
 spring.security.oauth2.client.provider.dummy-provider.token-uri=http://dummy.127.0.0.1.nip.io:9080/auth/dummy/fake/token
 spring.security.oauth2.client.provider.dummy-provider.user-info-uri=http://dummy.127.0.0.1.nip.io:9080/auth/dummy/fake/userinfo
 spring.security.oauth2.client.provider.dummy-provider.user-name-attribute=id
+
+gameon.redhatauth=${REDHAT_AUTH:"test1:pwd1:prefix1,test2:pwd2:prefix2"}
+
