--- a/auth-app/src/main/resources/application.properties
+++ b/auth-app/src/main/resources/application.properties
@@ -40,4 +40,5 @@ spring.security.oauth2.client.registration.facebook.redirect-uri=${FRONT_END_AUT
 spring.security.oauth2.client.registration.google.redirect-uri=${FRONT_END_AUTH_URL}/oauth2/code/google
 
 gameon.redhatauth=${REDHAT_AUTH:"redhat1:examplepassword:collaborator,redhat2:examplepassword:explorer"}
+gameon.redhattarget=${REDHAT_TARGET:1019fac08c6fec248399e0057578f624}
 
