--- a/auth-app/src/test/resources/application.properties
+++ b/auth-app/src/test/resources/application.properties
@@ -18,7 +18,7 @@ server.port=9080
 spring.security.oauth2.client.registration.google.client-id=<your client id>
 spring.security.oauth2.client.registration.google.client-secret=<your client secret>
  
-spring.security.oauth2.client.registration.facebook.client-id=<your client id> 
+spring.security.oauth2.client.registration.facebook.client-id=<your client id>
 spring.security.oauth2.client.registration.facebook.client-secret=<your client secret>
 
 spring.security.oauth2.client.registration.github.client-id=<your client id> 
@@ -42,4 +42,5 @@ spring.security.oauth2.client.provider.dummy-provider.user-info-uri=http://dummy
 spring.security.oauth2.client.provider.dummy-provider.user-name-attribute=id
 
 gameon.redhatauth=${REDHAT_AUTH:"test1:pwd1:prefix1,test2:pwd2:prefix2"}
+gameon.redhattarget=${REDHAT_TARGET:1019fac08c6fec248399e0057578f624}
 
